High contrast color fixed to toggle buttons, inputs and opacity
The patch fixes the toggle buttons for animation speed and the box
shadow type, inside the shadow editor.
Set opacity on disabled color. They are dimmed in places like the
text prompt in the Coverage panel and inputs and button in the
Sensors panel.
Fixed the hover state in the Request blocking panel. Where the
hover gradient is removed and background is set to Highlight.

Before: https://imgur.com/a/JHAzhS5
After: https://imgur.com/a/RTbiYad

Bug: 1048378

--- a/front_end/inline_editor/cssShadowEditor.css
+++ b/front_end/inline_editor/cssShadowEditor.css
@@ -94,6 +94,16 @@
 
 @media (forced-colors: active) {
     :host {
-        border: 1px solid CanvasText !important;
+        border: 1px solid CanvasText;
+    }
+    .shadow-editor-button-left:hover,
+    .shadow-editor-button-right:hover
+    .shadow-editor-button-left.enabled,
+    .shadow-editor-button-right.enabled,
+    .shadow-editor-button-left.enabled:focus,
+    .shadow-editor-button-right.enabled:focus {
+        forced-color-adjust: none;
+        background-color: Highlight;
+        color: HighlightText;
     }
 }
